# koala

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
cpp/: board.hpp  encoder.hpp  mcts.hpp  server.cpp  tgnet.hpp  wasm.cpp
docs/: game-record-format.md  how-it-works.md
paper/: koala_draft.md  paper.css
results/universal/: champion.pt
scripts/: brand_assets.py  build_3d.py  build_native.py  build_wasm.sh  build_webapp.py  contrast_check.cjs  duel_wasm_js.cjs  export_3d.py  export_webapp.py  lnd_score.py  make_demo_gif.py  make_lnd_suite.py  make_og.py  play.py  record_check.cjs  share_check.cjs  wasm_check.cjs  webapp_check.cjs
tests/: conftest.py  reference_go.py  test_boardgraph.py  test_goldens.py  test_lnd.py  test_mcts.py  test_nn.py  test_node_ordering.py  test_patch.py  test_penrose.py  test_periodic.py  test_records.py  test_records_cross.py  test_render.py  test_rules_classical.py  test_rules_differential.py  test_rules_properties.py  test_symmetry.py  test_uniform.py
tests/goldens/: hex_c40_s0.json  hex_c40_s0.npz  square_c40_s0.json  square_c40_s0.npz  tri_c40_s0.json  tri_c40_s0.npz
tests/lnd/: hex_small_capture_vital_6.json  hex_small_capture_vital_7.json  hex_small_capture_vital_8.json  hex_small_eye3_10.json  hex_small_eye3_11.json  hex_small_eye3_12.json  hex_small_eye3_13.json  (+38 more)
tilinggo/: __init__.py  config.py  export.py  records.py
tools/: parity_dump.cpp
webapp/: engine.js  engine_worker.js  native_ui.js  records.js  share.js  style.css  tgwasm.js  ui.js  ui3d.js  wasm_glue.js
(+24 files in other folders)
