[project]
name = "euclidean-go"
version = "0.1.0"
description = "A geometry-blind AlphaZero-style Go engine that plays on any Euclidean tiling"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.26",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tilinggo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: slower end-to-end tests"]
